--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <a href="index.html">Home</a>
 <a href="about.html">About</a>
 <a href="products.html">Products</a>
+<a href="privacy.html">Legal</a>
 <a href="contact.html">Contact</a>
     </nav>
   </div>
@@ -215,6 +216,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="products.html">Products</a>
+      <a href="privacy.html">Legal</a>
       <a href="contact.html">Contact</a>
     </div>
 
