--- a/privacy.html
+++ b/privacy.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Products | Grow Strong</title>
+  <title>Contact | Grow Strong</title>
   <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/products.css">
+  <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="css/chatbot.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -24,32 +24,82 @@
         <a href="products.html">Products</a>
         <a href="privacy.html">Legal</a>
         <a href="contact.html">Contact</a>
+
       </nav>
     </div>
   </header>
 
-  <section>
-    <div class="container">
-      <h2>Our Product Catalog</h2>
-      <div class="grid">
+<section class="legal-page">
+  <div class="legal-container">
 
-        <div class="product-card">
-          <img src="https://images.unsplash.com/photo-1598514983318-2f64f8f6d8e0">
-          <h3>Drip Irrigation</h3>
-          <p>Starting ₹2500</p>
-          <a href="product-detail.html?product=drip" class="btn">View Details</a>
-        </div>
+    <h1 class="legal-title">Legal Policies</h1>
+    <p class="legal-subtitle">
+      Transparent policies and professional standards of Grow Strong Services.
+    </p>
 
-        <div class="product-card">
-          <img src="https://images.unsplash.com/photo-1581091012184-7c4a6cddf4c3">
-          <h3>HDPE Pipe</h3>
-          <p>Starting ₹120/m</p>
-          <a href="product-detail.html?product=hdpe" class="btn">View Details</a>
-        </div>
+    <!-- TERMS -->
+    <div class="legal-card">
+      <h2>Terms & Conditions</h2>
 
-      </div>
+      <h4>1. Acceptance of Terms</h4>
+      <p>By accessing this website, you agree to comply with our terms and conditions.</p>
+
+      <h4>2. Products & Services</h4>
+      <p>We provide irrigation systems, HDPE lapeta pipes, drip irrigation systems and agricultural solutions across India.</p>
+
+      <h4>3. Pricing & Changes</h4>
+      <p>All prices are subject to change without prior notice.</p>
+
+      <h4>4. Limitation of Liability</h4>
+      <p>We are not responsible for indirect damages arising from product usage.</p>
+
+      <h4>5. Governing Law</h4>
+      <p>These terms are governed by the laws of India.</p>
     </div>
-  </section>
+
+    <!-- PRIVACY -->
+    <div class="legal-card">
+      <h2>Privacy Policy</h2>
+
+      <h4>Information We Collect</h4>
+      <p>Name, phone number, email address and other details submitted through contact forms.</p>
+
+      <h4>Use of Information</h4>
+      <p>To respond to inquiries, improve services and communicate updates.</p>
+
+      <h4>Data Security</h4>
+      <p>We implement appropriate security measures to protect your information.</p>
+
+      <h4>Third-Party Sharing</h4>
+      <p>We do not sell or trade personal information.</p>
+    </div>
+
+    <!-- REFUND -->
+    <div class="legal-card">
+      <h2>Refund & Return Policy</h2>
+      <p>Products may be returned within 7 days if damaged or defective.</p>
+      <p>Refunds are processed within 7–10 working days after approval.</p>
+    </div>
+
+    <!-- SHIPPING -->
+    <div class="legal-card">
+      <h2>Shipping & Delivery Policy</h2>
+      <p>We deliver across India.</p>
+      <p>Estimated delivery time: 5–10 working days depending on location.</p>
+    </div>
+
+    <!-- DISCLAIMER -->
+    <div class="legal-card">
+      <h2>Disclaimer</h2>
+      <p>The information on this website is for general informational purposes only.</p>
+      <p>Product suitability may vary depending on agricultural conditions.</p>
+    </div>
+
+  </div>
+</section>
+
+
+
   <!-- CHATBOT -->
   <div class="chatbot-container">
 
