--- a/about.html
+++ b/about.html
@@ -5,13 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About | Grow Strong</title>
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/common.css">
+<link rel="stylesheet" href="css/about.css">
 <link rel="stylesheet" href="css/chatbot.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
 
+<!-- HEADER -->
 <header>
   <div class="container header-inner">
     <div class="logo">🌱 Grow Strong</div>
@@ -22,27 +25,54 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="products.html">Products</a>
+      <a href="privacy.html">Legal</a>
       <a href="contact.html">Contact</a>
     </nav>
   </div>
 </header>
 
-<section style="padding-top:120px;">
+<!-- FIXED HEADER SPACE -->
+<div style="height:80px;"></div>
+
+<!-- MAIN CONTENT -->
+<main style="min-height:70vh;">
+<section class="about-section">
   <div class="container">
-    <h2>About Grow Strong Services</h2>
-    <p>
-      We provide advanced irrigation systems, HDPE pipes, mulch films and
-      complete agriculture solutions across India.
-    </p>
+    <div class="about-wrapper">
+
+      <div class="about-text">
+        <h2>About Grow Strong Services</h2>
+        <p>
+          Grow Strong Services provides advanced irrigation systems,
+          HDPE lapeta pipes, drip irrigation systems and mulch films.
+        </p>
+        <p>
+          Our mission is to support farmers with modern,
+          durable and cost-effective irrigation technology.
+        </p>
+
+        <div class="about-highlight">
+          <h3>Our Vision</h3>
+          <p>To empower agriculture with innovation and sustainability.</p>
+        </div>
+      </div>
+
+      <div class="about-img">
+        <img src="https://images.unsplash.com/photo-1500382017468-9049fed747ef" alt="Agriculture">
+      </div>
+
+    </div>
   </div>
 </section>
 
+<section class="parallax">
+  <span>Growing Stronger Together 🌱</span>
+</section>
+</main>
+
 <!-- CHATBOT -->
 <div class="chatbot-container">
-
-  <div class="chat-toggle" id="chatToggle">
-    💬
-  </div>
+  <div class="chat-toggle" id="chatToggle">💬</div>
 
   <div class="chatbox" id="chatbox">
     <div class="chat-header">
@@ -52,7 +82,7 @@
 
     <div class="chat-body" id="chatBody">
       <div class="bot-message">
-        Hello 👋 Welcome to Grow Strong Services.  
+        Hello 👋 Welcome to Grow Strong Services.
         How can I help you?
       </div>
     </div>
@@ -62,13 +92,11 @@
       <button id="sendBtn">Send</button>
     </div>
   </div>
-
 </div>
 
 <!-- FOOTER -->
 <footer>
   <div class="container footer-grid">
-
     <div class="footer-brand">
       <h3>🌱 Grow Strong</h3>
       <p>Providing smart irrigation & modern agriculture solutions across India.</p>
@@ -79,6 +107,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="products.html">Products</a>
+      <a href="privacy.html">Legal</a>
       <a href="contact.html">Contact</a>
     </div>
 
@@ -88,13 +117,13 @@
       <p><i class="fas fa-envelope"></i> info@growstrong.com</p>
       <p><i class="fas fa-map-marker-alt"></i> Rajasthan, India</p>
     </div>
-
   </div>
 
   <div class="footer-bottom">
     <p>© 2026 Grow Strong Services. All Rights Reserved.</p>
   </div>
 </footer>
+
 <script src="js/script.js"></script>
 <script src="js/chatbot.js"></script>
 </body>
