--- a/contact.html
+++ b/contact.html
@@ -1,107 +1,149 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact | Grow Strong</title>
 
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/chatbot.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact | Grow Strong</title>
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/chatbot.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
 
-<header>
-  <div class="container header-inner">
-    <div class="logo">🌱 Grow Strong</div>
-    <div class="menu-toggle" id="menu-toggle">☰</div>
-    <nav id="navbar">
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
-</header>
+  <header>
+    <div class="container header-inner">
+      <div class="logo">🌱 Grow Strong</div>
+      <div class="menu-toggle" id="menu-toggle">☰</div>
+      <nav id="navbar">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="products.html">Products</a>
+        <a href="privacy.html">Legal</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+  <!-- CONTACT HERO SPACE -->
+  <div style="height:90px;"></div>
 
-<section>
-  <div class="container">
-    <h2>Contact Us</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea rows="5" placeholder="Your Message"></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </div>
-</section>
+  <section class="contact-section">
+    <div class="container">
 
-<section>
-  <iframe 
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56957.53322454336!2d80.9682781282039!3d26.844855564798443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfd49fc60a843%3A0x92fc72e19b623f6a!2sGomti%20Nagar%2C%20Lucknow%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1771137808104!5m2!1sen!2sin"
-  width="100%" height="300" style="border:0;" allowfullscreen></iframe>
-</section>
+      <h2>Get In Touch</h2>
 
-<!-- CHATBOT -->
-<div class="chatbot-container">
+      <div class="contact-wrapper">
 
-  <div class="chat-toggle" id="chatToggle">
-    💬
-  </div>
+        <!-- LEFT SIDE INFO -->
+        <div class="contact-info">
 
-  <div class="chatbox" id="chatbox">
-    <div class="chat-header">
-      Grow Strong Assistant
-      <span id="closeChat">✖</span>
+          <div class="info-card">
+            <i class="fas fa-phone"></i>
+            <h3>Call Us</h3>
+            <p>+91 99999 99999</p>
+          </div>
+
+          <div class="info-card">
+            <i class="fas fa-envelope"></i>
+            <h3>Email</h3>
+            <p>info@growstrong.com</p>
+          </div>
+
+          <div class="info-card">
+            <i class="fas fa-map-marker-alt"></i>
+            <h3>Location</h3>
+            <p>Rajasthan, India</p>
+          </div>
+
+        </div>
+
+        <!-- RIGHT SIDE FORM -->
+        <div class="contact-form-box">
+          <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea rows="5" placeholder="Your Message"></textarea>
+            <button type="submit">Send Message</button>
+          </form>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- MAP SECTION -->
+  <section class="map-section">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56957.53322454336!2d80.9682781282039!3d26.844855564798443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfd49fc60a843%3A0x92fc72e19b623f6a!2sGomti%20Nagar%2C%20Lucknow%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1771137808104!5m2!1sen!2sin"
+      allowfullscreen>
+    </iframe>
+  </section>
+
+  <!-- CHATBOT -->
+  <div class="chatbot-container">
+
+    <div class="chat-toggle" id="chatToggle">
+      💬
     </div>
 
-    <div class="chat-body" id="chatBody">
-      <div class="bot-message">
-        Hello 👋 Welcome to Grow Strong Services.  
-        How can I help you?
+    <div class="chatbox" id="chatbox">
+      <div class="chat-header">
+        Grow Strong Assistant
+        <span id="closeChat">✖</span>
+      </div>
+
+      <div class="chat-body" id="chatBody">
+        <div class="bot-message">
+          Hello 👋 Welcome to Grow Strong Services.
+          How can I help you?
+        </div>
+      </div>
+
+      <div class="chat-footer">
+        <input type="text" id="chatInput" placeholder="Type your message...">
+        <button id="sendBtn">Send</button>
       </div>
     </div>
 
-    <div class="chat-footer">
-      <input type="text" id="chatInput" placeholder="Type your message...">
-      <button id="sendBtn">Send</button>
-    </div>
   </div>
 
-</div>
+  
+  <!-- FOOTER -->
+  <footer>
+    <div class="container footer-grid">
 
-<!-- FOOTER -->
-<footer>
-  <div class="container footer-grid">
+      <div class="footer-brand">
+        <h3>🌱 Grow Strong</h3>
+        <p>Providing smart irrigation & modern agriculture solutions across India.</p>
+      </div>
 
-    <div class="footer-brand">
-      <h3>🌱 Grow Strong</h3>
-      <p>Providing smart irrigation & modern agriculture solutions across India.</p>
+      <div class="footer-links">
+        <h4>Quick Links</h4>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="products.html">Products</a>
+        <a href="privacy.html">Legal</a>
+        <a href="contact.html">Contact</a>
+      </div>
+
+      <div class="footer-contact">
+        <h4>Contact Info</h4>
+        <p><i class="fas fa-phone"></i> +91 99999 99999</p>
+        <p><i class="fas fa-envelope"></i> info@growstrong.com</p>
+        <p><i class="fas fa-map-marker-alt"></i> Rajasthan, India</p>
+      </div>
+
     </div>
 
-    <div class="footer-links">
-      <h4>Quick Links</h4>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="products.html">Products</a>
-      <a href="contact.html">Contact</a>
+    <div class="footer-bottom">
+      <p>© 2026 Grow Strong Services. All Rights Reserved.</p>
     </div>
-
-    <div class="footer-contact">
-      <h4>Contact Info</h4>
-      <p><i class="fas fa-phone"></i> +91 99999 99999</p>
-      <p><i class="fas fa-envelope"></i> info@growstrong.com</p>
-      <p><i class="fas fa-map-marker-alt"></i> Rajasthan, India</p>
-    </div>
-
-  </div>
-
-  <div class="footer-bottom">
-    <p>© 2026 Grow Strong Services. All Rights Reserved.</p>
-  </div>
-</footer>
-<script src="js/script.js"></script>
-<script src="js/chatbot.js"></script>
+  </footer>
+  <script src="js/script.js"></script>
+  <script src="js/chatbot.js"></script>
 </body>
+
 </html>
