updated pictures and some files

--- a/product-detail.html
+++ b/product-detail.html
@@ -18,8 +18,11 @@
 
   <header>
     <div class="container header-inner">
-      <div class="logo">🌱 Grow Strong</div>
-      <div class="menu-toggle" id="menu-toggle">☰</div>
+      <img src="images/log.png" alt="Shriji AgriTech Logo" class="log">
+            <div class="logo">Shri Ji AgriTech</div>
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
+      </div>
       <nav id="navbar">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -65,31 +68,12 @@
   </div>
 </section>
 
-<!-- SPECIFICATIONS -->
 <section class="spec-section">
   <div class="container">
     <h2>Product Specifications</h2>
 
-    <div class="spec-grid">
-      <div class="spec-box">
-        <h4>Material</h4>
-        <p>High Quality Polyethylene</p>
-      </div>
-
-      <div class="spec-box">
-        <h4>Usage</h4>
-        <p>Agriculture & Farming</p>
-      </div>
-
-      <div class="spec-box">
-        <h4>Warranty</h4>
-        <p>1 Year</p>
-      </div>
-
-      <div class="spec-box">
-        <h4>Availability</h4>
-        <p>Pan India Delivery</p>
-      </div>
+    <div class="spec-grid" id="specGrid">
+      <!-- Dynamic Content Aayega -->
     </div>
   </div>
 </section>
@@ -123,36 +107,63 @@
   </div>
 
   <!-- FOOTER -->
-  <footer>
-    <div class="container footer-grid">
+<footer>
+  <div class="container footer-grid">
 
-      <div class="footer-brand">
-        <h3>🌱 Grow Strong</h3>
-        <p>Providing smart irrigation & modern agriculture solutions across India.</p>
+    <!-- BRAND -->
+    <div class="footer-brand">
+      <img src="images/logo.jpeg" alt="Shriji AgriTech Logo" class="footer-logo">
+      <p>Providing smart irrigation & modern agriculture solutions across India.</p>
+
+      <!-- SOCIAL ICONS -->
+      <div class="social-icons">
+        <a href="https://www.instagram.com/shrijiagritech/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://wa.link/3utjo2" target="_blank">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://www.facebook.com/Shrijiagritech/" target="_blank">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.youtube.com/@shreeGagri" target="_blank">
+          <i class="fab fa-youtube"></i>
+        </a>
       </div>
-
-      <div class="footer-links">
-        <h4>Quick Links</h4>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="products.html">Products</a>
-        <a href="privacy.html">Legal</a>
-        <a href="contact.html">Contact</a>
-      </div>
-
-      <div class="footer-contact">
-        <h4>Contact Info</h4>
-        <p><i class="fas fa-phone"></i> +91 99999 99999</p>
-        <p><i class="fas fa-envelope"></i> info@growstrong.com</p>
-        <p><i class="fas fa-map-marker-alt"></i> Rajasthan, India</p>
-      </div>
-
     </div>
 
-    <div class="footer-bottom">
-      <p>© 2026 Grow Strong Services. All Rights Reserved.</p>
+    <!-- LINKS -->
+    <div class="footer-links">
+      <h4>Quick Links</h4>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="products.html">Products</a>
+      <a href="privacy.html">Legal</a>
+      <a href="contact.html">Contact</a>
     </div>
-  </footer>
+
+    <!-- CONTACT -->
+    <div class="footer-contact">
+      <h4>Contact Info</h4>
+      <p><i class="fas fa-phone"></i> +91 9452595862</p>
+      <p><i class="fas fa-envelope"></i> SHRIJIAGRITEC@GMAIL.COM</p>
+      <p><i class="fas fa-map-marker-alt"></i> Basantapur, Shahjahanpur, Uttar Pradesh, 242042</p>
+    </div>
+
+  </div>
+
+ <div class="footer-bottom">
+  <p>
+    © 2026 Grow Strong Services. All Rights Reserved.
+    <br>
+    Designed & Developed by 
+    <a href="https://alphaaryx.vercel.app/" target="_blank" class="dev-link">
+      AlphaAryx (Aryan)
+    </a>
+  </p>
+</div>
+</footer>
+   <script src="js/product-detail.js"></script>
   <script src="js/script.js"></script>
   <script src="js/chatbot.js"></script>
 </body>
