--- a/about.html
+++ b/about.html
@@ -16,11 +16,12 @@
 
 <!-- HEADER -->
 <header>
-  <div class="container header-inner">
-    <div class="logo">🌱 Grow Strong</div>
-    <div class="menu-toggle" id="menu-toggle">
-      <i class="fas fa-bars"></i>
-    </div>
+    <div class="container header-inner">
+      <img src="images/log.png" alt="Shriji AgriTech Logo" class="log">
+            <div class="logo">Shri Ji AgriTech</div>
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
+      </div>
     <nav id="navbar">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -31,24 +32,25 @@
   </div>
 </header>
 
-<!-- FIXED HEADER SPACE -->
+<!-- HEADER SPACE -->
 <div style="height:80px;"></div>
 
-<!-- MAIN CONTENT -->
-<main style="min-height:70vh;">
+<!-- ABOUT SECTION -->
 <section class="about-section">
   <div class="container">
     <div class="about-wrapper">
 
+      <!-- TEXT SIDE -->
       <div class="about-text">
-        <h2>About Grow Strong Services</h2>
+        <h2>About Shri JI AgriTech Services</h2>
         <p>
-          Grow Strong Services provides advanced irrigation systems,
-          HDPE lapeta pipes, drip irrigation systems and mulch films.
+          We are a forward-thinking and innovative company dedicated to delivering high-quality digital solutions. Our goal is to help businesses grow, adapt, and succeed in today’s fast-changing digital world. With a strong focus on creativity, performance, and reliability, we turn ideas into powerful and meaningful results.
         </p>
         <p>
-          Our mission is to support farmers with modern,
-          durable and cost-effective irrigation technology.
+          Our team consists of passionate professionals who believe in excellence and continuous improvement. We combine modern technology with smart strategies to create solutions that are not only visually impressive but also highly functional and user-friendly.
+        </p>
+        <p>
+Our mission is simple — to create value, inspire innovation, and help businesses achieve sustainable growth through smart digital solutions.
         </p>
 
         <div class="about-highlight">
@@ -57,14 +59,16 @@
         </div>
       </div>
 
+      <!-- SMALL IMAGE (LOCAL STORAGE) -->
       <div class="about-img">
-        <img src="https://images.unsplash.com/photo-1500382017468-9049fed747ef" alt="Agriculture">
+        <img src="images/2.jpg" alt="Agriculture Image">
       </div>
 
     </div>
   </div>
 </section>
 
+<!-- PARALLAX BIG IMAGE (UNCHANGED) -->
 <section class="parallax">
   <span>Growing Stronger Together 🌱</span>
 </section>
@@ -94,14 +98,33 @@
   </div>
 </div>
 
-<!-- FOOTER -->
+  <!-- FOOTER -->
 <footer>
   <div class="container footer-grid">
+
+    <!-- BRAND -->
     <div class="footer-brand">
-      <h3>🌱 Grow Strong</h3>
+      <img src="images/logo.jpeg" alt="Shriji AgriTech Logo" class="footer-logo">
       <p>Providing smart irrigation & modern agriculture solutions across India.</p>
+
+      <!-- SOCIAL ICONS -->
+      <div class="social-icons">
+        <a href="https://www.instagram.com/shrijiagritech/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://wa.link/3utjo2" target="_blank">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://www.facebook.com/Shrijiagritech/" target="_blank">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.youtube.com/@shreeGagri" target="_blank">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
     </div>
 
+    <!-- LINKS -->
     <div class="footer-links">
       <h4>Quick Links</h4>
       <a href="index.html">Home</a>
@@ -111,17 +134,26 @@
       <a href="contact.html">Contact</a>
     </div>
 
+    <!-- CONTACT -->
     <div class="footer-contact">
       <h4>Contact Info</h4>
-      <p><i class="fas fa-phone"></i> +91 99999 99999</p>
-      <p><i class="fas fa-envelope"></i> info@growstrong.com</p>
-      <p><i class="fas fa-map-marker-alt"></i> Rajasthan, India</p>
+      <p><i class="fas fa-phone"></i> +91 9452595862</p>
+      <p><i class="fas fa-envelope"></i> SHRIJIAGRITEC@GMAIL.COM</p>
+      <p><i class="fas fa-map-marker-alt"></i> Basantapur, Shahjahanpur, Uttar Pradesh, 242042</p>
     </div>
+
   </div>
 
-  <div class="footer-bottom">
-    <p>© 2026 Grow Strong Services. All Rights Reserved.</p>
-  </div>
+ <div class="footer-bottom">
+  <p>
+    © 2026 Grow Strong Services. All Rights Reserved.
+    <br>
+    Designed & Developed by 
+    <a href="https://alphaaryx.vercel.app/" target="_blank" class="dev-link">
+      AlphaAryx (Aryan)
+    </a>
+  </p>
+</div>
 </footer>
 
 <script src="js/script.js"></script>
