--- a/index.html
+++ b/index.html
@@ -1,216 +1,281 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Grow Strong Services | Premium Agriculture Solutions</title>
-<meta name="description" content="Grow Strong Services provides premium irrigation systems, HDPE pipes, mulch films and modern agriculture solutions.">
 
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/chatbot.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shri Ji AgriTech | Premium Agriculture Solutions</title>
+  <meta name="description"
+    content="Shri Ji AgriTech provides premium irrigation systems, HDPE pipes, mulch films and modern agriculture solutions.">
+
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/chatbot.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
 
-<!-- HEADER -->
-<header>
-  <div class="container header-inner">
-    <div class="logo">🌱 Grow Strong</div>
-    <div class="menu-toggle" id="menu-toggle">
-      <i class="fas fa-bars"></i>
-    </div>
-    <nav id="navbar">
-<a href="index.html">Home</a>
-<a href="about.html">About</a>
-<a href="products.html">Products</a>
-<a href="privacy.html">Legal</a>
-<a href="contact.html">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<!-- HERO -->
-<section class="hero">
-  <div class="hero-overlay"></div>
-  <div class="hero-content">
-    <h1>Smart Irrigation. Stronger Crops.</h1>
-    <p>Premium HDPE Pipes, Drip Systems & Modern Farming Solutions</p>
-    <div class="hero-buttons">
-      <a href="#products" class="btn">Explore Products</a>
-      <a href="#contact" class="btn-outline">Get Quote</a>
-    </div>
-  </div>
-</section>
-
-<!-- STATS -->
-<section class="stats">
-  <div class="container stats-wrapper">
-    <div class="stat-box">
-      <h2 class="counter" data-target="500">0</h2>
-      <p>Happy Clients</p>
-    </div>
-    <div class="stat-box">
-      <h2 class="counter" data-target="120">0</h2>
-      <p>Projects Completed</p>
-    </div>
-    <div class="stat-box">
-      <h2 class="counter" data-target="10">0</h2>
-      <p>Years Experience</p>
-    </div>
-  </div>
-</section>
-
-<!-- ABOUT -->
-<section id="about" class="about">
-  <div class="container about-wrapper">
-    <div class="about-text">
-      <h2>About Grow Strong Services</h2>
-      <p>
-        Grow Strong Services is a trusted provider of advanced irrigation systems,
-        HDPE lapeta pipes, mulch films, garden pipes and modern agriculture solutions.
-        We help farmers increase productivity with smart and sustainable solutions.
-      </p>
-    </div>
-    <div class="about-img">
-      <img src="https://images.unsplash.com/photo-1500382017468-9049fed747ef" alt="">
-    </div>
-  </div>
-</section>
-
-<!-- WHY CHOOSE US -->
-<section class="why">
-  <div class="container">
-    <h2>Why Choose Us</h2>
-    <div class="grid">
-
-      <div class="card">
-        <i class="fas fa-award"></i>
-        <h3>Premium Quality</h3>
-        <p>High-grade materials with durability and performance guarantee.</p>
+  <!-- HEADER -->
+  <header>
+    <div class="container header-inner">
+      <img src="images/log.png" alt="Shriji AgriTech Logo" class="log">
+            <div class="logo">Shri Ji AgriTech</div>
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
       </div>
-
-      <div class="card">
-        <i class="fas fa-truck"></i>
-        <h3>Fast Delivery</h3>
-        <p>Pan India delivery network with timely installation support.</p>
-      </div>
-
-      <div class="card">
-        <i class="fas fa-user-check"></i>
-        <h3>Expert Support</h3>
-        <p>Professional consultation for irrigation planning and setup.</p>
-      </div>
-
-      <div class="card">
-        <i class="fas fa-leaf"></i>
-        <h3>Eco Friendly</h3>
-        <p>Sustainable agriculture products designed for modern farming.</p>
-      </div>
-
+      <nav id="navbar">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="products.html">Products</a>
+        <a href="privacy.html">Legal</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </div>
-  </div>
-</section>
+  </header>
 
-<!-- PARALLAX -->
-<section class="parallax">
-  <h2>Boost Your Crop Yield With Smart Irrigation</h2>
-</section>
+  <!-- HERO -->
+  <section class="hero">
+    <div class="hero-overlay"></div>
+    <div class="hero-content">
+      <h1>Smart Irrigation. Stronger Crops.</h1>
+      <p>Premium HDPE Pipes, Drip Systems & Modern Farming Solutions</p>
+      <div class="hero-buttons">
+        <a href="#products" class="btn">Explore Products</a>
+        <a href="#contact" class="btn-outline">Get Quote</a>
+      </div>
+    </div>
+  </section>
 
+  <!-- STATS -->
+  <section class="stats">
+    <div class="container stats-wrapper">
+      <div class="stat-box">
+        <h2 class="counter" data-target="500">0</h2>
+        <p>Happy Clients</p>
+      </div>
+      <div class="stat-box">
+        <h2 class="counter" data-target="120">0</h2>
+        <p>Projects Completed</p>
+      </div>
+      <div class="stat-box">
+        <h2 class="counter" data-target="10">0</h2>
+        <p>Years Experience</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ABOUT -->
+  <section id="about" class="about">
+    <div class="container about-wrapper">
+      <div class="about-text">
+        <h2>About Grow Strong Services</h2>
+        <p>
+          Grow Strong Services is a trusted provider of advanced irrigation systems,
+          HDPE lapeta pipes, mulch films, garden pipes and modern agriculture solutions.
+          We help farmers increase productivity with smart and sustainable solutions.
+        </p>
+      </div>
+      <div class="about-img">
+        <img src="https://images.unsplash.com/photo-1500382017468-9049fed747ef" alt="">
+      </div>
+    </div>
+  </section>
+
+  <!-- WHY CHOOSE US -->
+  <section class="why">
+    <div class="container">
+      <h2>Why Choose Us</h2>
+      <div class="grid">
+
+        <div class="card">
+          <i class="fas fa-award"></i>
+          <h3>Premium Quality</h3>
+          <p>High-grade materials with durability and performance guarantee.</p>
+        </div>
+
+        <div class="card">
+          <i class="fas fa-truck"></i>
+          <h3>Fast Delivery</h3>
+          <p>Pan India delivery network with timely installation support.</p>
+        </div>
+
+        <div class="card">
+          <i class="fas fa-user-check"></i>
+          <h3>Expert Support</h3>
+          <p>Professional consultation for irrigation planning and setup.</p>
+        </div>
+
+        <div class="card">
+          <i class="fas fa-leaf"></i>
+          <h3>Eco Friendly</h3>
+          <p>Sustainable agriculture products designed for modern farming.</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- PARALLAX -->
+  <section class="parallax">
+    <h2>Boost Your Crop Yield With Smart Irrigation</h2>
+  </section>
 <!-- PRODUCTS -->
-<section id="products">
+<section id="products" class="product-slider-section">
   <div class="container">
     <h2>Our Products</h2>
-    <div class="grid">
 
-      <div class="product-card">
-        <img src="https://images.unsplash.com/photo-1598514983318-2f64f8f6d8e0">
-        <h3>Drip Irrigation System</h3>
+    <div class="slider-wrapper">
+
+      <button class="slide-btn prev">&#10094;</button>
+
+      <div class="product-slider" id="productSlider">
+
+        <div class="product-card">
+          <img src="images/drip.jpg" alt="">
+          <h3>Drip Irrigation System</h3>
+        </div>
+
+        <div class="product-card">
+          <img src="images/hdpe.jpeg" alt="">
+          <h3>HDPE Lapeta Pipe</h3>
+        </div>
+
+        <div class="product-card">
+          <img src="images/mulch.jpg" alt="">
+          <h3>Mulch Paper</h3>
+        </div>
+
+        <div class="product-card">
+          <img src="images/cropsupport.jpg" alt="">
+          <h3>Crop Support Net</h3>
+        </div>
+
+        <div class="product-card">
+          <img src="images/plant.jpeg" alt="">
+          <h3>Plant Support Clip</h3>
+        </div>
+
+        <div class="product-card">
+          <img src="images/chicken.jpeg" alt="">
+          <h3>Chicken Manure</h3>
+        </div>
+
+        <div class="product-card">
+          <img src="images/mini.jpeg" alt="">
+          <h3>Mini Sprinkler System</h3>
+        </div>
+
+        <div class="product-card">
+          <img src="images/weed.jpeg" alt="">
+          <h3>Weed Mat</h3>
+        </div>
+
+        <div class="product-card">
+          <img src="images/tirpal.jpeg" alt="">
+          <h3>Agricultural Tirpal</h3>
+        </div>
+
+        <div class="product-card">
+          <img src="images/cropcover.jpg" alt="">
+          <h3>Plant Crop Cover</h3>
+        </div>
+
       </div>
 
-      <div class="product-card">
-        <img src="https://images.unsplash.com/photo-1581091012184-7c4a6cddf4c3">
-        <h3>HDPE Lapeta Pipe</h3>
-      </div>
-
-      <div class="product-card">
-        <img src="https://images.unsplash.com/photo-1625246333195-78d9c38ad449">
-        <h3>Mulch Film</h3>
-      </div>
+      <button class="slide-btn next">&#10095;</button>
 
     </div>
   </div>
 </section>
 
-<!-- FAQ -->
-<section class="faq">
-  <div class="container">
-    <h2>Frequently Asked Questions</h2>
+  <!-- FAQ -->
+  <section class="faq">
+    <div class="container">
+      <h2>Frequently Asked Questions</h2>
 
-    <div class="faq-item">
-      <button class="faq-question">Do you provide installation support?</button>
-      <div class="faq-answer">Yes, we provide full installation and consultation support.</div>
+      <div class="faq-item">
+        <button class="faq-question">Do you provide installation support?</button>
+        <div class="faq-answer">Yes, we provide full installation and consultation support.</div>
+      </div>
+
+      <div class="faq-item">
+        <button class="faq-question">Do you deliver across India?</button>
+        <div class="faq-answer">Yes, we offer Pan India delivery services.</div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea rows="5" placeholder="Your Message"></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- CHATBOT -->
+  <div class="chatbot-container">
+
+    <div class="chat-toggle" id="chatToggle">
+      💬
     </div>
 
-    <div class="faq-item">
-      <button class="faq-question">Do you deliver across India?</button>
-      <div class="faq-answer">Yes, we offer Pan India delivery services.</div>
-    </div>
+    <div class="chatbox" id="chatbox">
+      <div class="chat-header">
+        Grow Strong Assistant
+        <span id="closeChat">✖</span>
+      </div>
 
-  </div>
-</section>
+      <div class="chat-body" id="chatBody">
+        <div class="bot-message">
+          Hello 👋 Welcome to Grow Strong Services.
+          How can I help you?
+        </div>
+      </div>
 
-<!-- CONTACT -->
-<section id="contact">
-  <div class="container">
-    <h2>Contact Us</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea rows="5" placeholder="Your Message"></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </div>
-</section>
-
-<!-- CHATBOT -->
-<div class="chatbot-container">
-
-  <div class="chat-toggle" id="chatToggle">
-    💬
-  </div>
-
-  <div class="chatbox" id="chatbox">
-    <div class="chat-header">
-      Grow Strong Assistant
-      <span id="closeChat">✖</span>
-    </div>
-
-    <div class="chat-body" id="chatBody">
-      <div class="bot-message">
-        Hello 👋 Welcome to Grow Strong Services.  
-        How can I help you?
+      <div class="chat-footer">
+        <input type="text" id="chatInput" placeholder="Type your message...">
+        <button id="sendBtn">Send</button>
       </div>
     </div>
 
-    <div class="chat-footer">
-      <input type="text" id="chatInput" placeholder="Type your message...">
-      <button id="sendBtn">Send</button>
-    </div>
   </div>
 
-</div>
-
-<!-- FOOTER -->
+  <!-- FOOTER -->
 <footer>
   <div class="container footer-grid">
 
+    <!-- BRAND -->
     <div class="footer-brand">
-      <h3>🌱 Grow Strong</h3>
+      <img src="images/logo.jpeg" alt="Shriji AgriTech Logo" class="footer-logo">
       <p>Providing smart irrigation & modern agriculture solutions across India.</p>
+
+      <!-- SOCIAL ICONS -->
+      <div class="social-icons">
+        <a href="https://www.instagram.com/shrijiagritech/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://wa.link/3utjo2" target="_blank">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://www.facebook.com/Shrijiagritech/" target="_blank">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.youtube.com/@shreeGagri" target="_blank">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
     </div>
 
+    <!-- LINKS -->
     <div class="footer-links">
       <h4>Quick Links</h4>
       <a href="index.html">Home</a>
@@ -220,20 +285,29 @@
       <a href="contact.html">Contact</a>
     </div>
 
+    <!-- CONTACT -->
     <div class="footer-contact">
       <h4>Contact Info</h4>
-      <p><i class="fas fa-phone"></i> +91 99999 99999</p>
-      <p><i class="fas fa-envelope"></i> info@growstrong.com</p>
-      <p><i class="fas fa-map-marker-alt"></i> Rajasthan, India</p>
+      <p><i class="fas fa-phone"></i> +91 9452595862</p>
+      <p><i class="fas fa-envelope"></i> SHRIJIAGRITEC@GMAIL.COM</p>
+      <p><i class="fas fa-map-marker-alt"></i> Basantapur, Shahjahanpur, Uttar Pradesh, 242042</p>
     </div>
 
   </div>
 
-  <div class="footer-bottom">
-    <p>© 2026 Grow Strong Services. All Rights Reserved.</p>
-  </div>
+ <div class="footer-bottom">
+  <p>
+    © 2026 Grow Strong Services. All Rights Reserved.
+    <br>
+    Designed & Developed by 
+    <a href="https://alphaaryx.vercel.app/" target="_blank" class="dev-link">
+      AlphaAryx (Aryan)
+    </a>
+  </p>
+</div>
 </footer>
-<script src="js/script.js"></script>
-<script src="js/chatbot.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/chatbot.js"></script>
 </body>
+
 </html>
