--- a/privacy.html
+++ b/privacy.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/contact.css">
   <link rel="stylesheet" href="css/chatbot.css">
+  <link rel="stylesheet" href="css/legal.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -16,8 +17,11 @@
 
   <header>
     <div class="container header-inner">
-      <div class="logo">🌱 Grow Strong</div>
-      <div class="menu-toggle" id="menu-toggle">☰</div>
+      <img src="images/log.png" alt="Shriji AgriTech Logo" class="log">
+            <div class="logo">Shri Ji AgriTech</div>
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fas fa-bars"></i>
+      </div>
       <nav id="navbar">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -129,36 +133,62 @@
   </div>
 
   <!-- FOOTER -->
-  <footer>
-    <div class="container footer-grid">
+<footer>
+  <div class="container footer-grid">
 
-      <div class="footer-brand">
-        <h3>🌱 Grow Strong</h3>
-        <p>Providing smart irrigation & modern agriculture solutions across India.</p>
+    <!-- BRAND -->
+    <div class="footer-brand">
+      <img src="images/logo.jpeg" alt="Shriji AgriTech Logo" class="footer-logo">
+      <p>Providing smart irrigation & modern agriculture solutions across India.</p>
+
+      <!-- SOCIAL ICONS -->
+      <div class="social-icons">
+        <a href="https://www.instagram.com/shrijiagritech/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://wa.link/3utjo2" target="_blank">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://www.facebook.com/Shrijiagritech/" target="_blank">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.youtube.com/@shreeGagri" target="_blank">
+          <i class="fab fa-youtube"></i>
+        </a>
       </div>
-
-      <div class="footer-links">
-        <h4>Quick Links</h4>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="products.html">Products</a>
-        <a href="privacy.html">Legal</a>
-        <a href="contact.html">Contact</a>
-      </div>
-
-      <div class="footer-contact">
-        <h4>Contact Info</h4>
-        <p><i class="fas fa-phone"></i> +91 99999 99999</p>
-        <p><i class="fas fa-envelope"></i> info@growstrong.com</p>
-        <p><i class="fas fa-map-marker-alt"></i> Rajasthan, India</p>
-      </div>
-
     </div>
 
-    <div class="footer-bottom">
-      <p>© 2026 Grow Strong Services. All Rights Reserved.</p>
+    <!-- LINKS -->
+    <div class="footer-links">
+      <h4>Quick Links</h4>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="products.html">Products</a>
+      <a href="privacy.html">Legal</a>
+      <a href="contact.html">Contact</a>
     </div>
-  </footer>
+
+    <!-- CONTACT -->
+    <div class="footer-contact">
+      <h4>Contact Info</h4>
+      <p><i class="fas fa-phone"></i> +91 9452595862</p>
+      <p><i class="fas fa-envelope"></i> SHRIJIAGRITEC@GMAIL.COM</p>
+      <p><i class="fas fa-map-marker-alt"></i> Basantapur, Shahjahanpur, Uttar Pradesh, 242042</p>
+    </div>
+
+  </div>
+
+ <div class="footer-bottom">
+  <p>
+    © 2026 Grow Strong Services. All Rights Reserved.
+    <br>
+    Designed & Developed by 
+    <a href="https://alphaaryx.vercel.app/" target="_blank" class="dev-link">
+      AlphaAryx (Aryan)
+    </a>
+  </p>
+</div>
+</footer>
   <script src="js/script.js"></script>
   <script src="js/chatbot.js"></script>
 </body>
